objects/Decision__c.object
<CustomObject>
    <fields>
        <fullName>Agenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda</label>
        <referenceTo>Agenda__c</referenceTo>
        <relationshipLabel>Decisions</relationshipLabel>
        <relationshipName>Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>Decisions_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Decision</label>
    <nameField>
        <displayFormat>DQ{00000}</displayFormat>
        <label>Decisions &amp; Questions Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>